--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
 fastapi==0.104.1
 uvicorn==0.24.0
 python-multipart==0.0.6
-
-tensorflow-cpu==2.12.0
-numpy
-opencv-python-headless
-pillow
-
+tensorflow==2.17.0
+pillow==10.1.0
+numpy==1.26.4
